Make sure the sections name are truncated with ellipses in the right place.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -650,7 +650,7 @@ div.left-navigation-sidebar {
       }
 
       div.board-name {
-        width: 168px;
+        width: calc(100% - 8px);
         float: left;
 
         div.internal {
